// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render correctly Select 1`] = `
<div
  className="input-wrapper input-wrapper--select"
>
  <div
    className="input-wrapper__field input-wrapper__field--select "
  >
    <p
      className="field__output"
      id="mockId"
      onSelectOption={[Function]}
    >
      mock1
    </p>
    <ul
      className="input-wrapper__select-list"
      data-amount={3}
    >
      <li
        data-type="list-item"
        key="mock1_0"
        onClick={[Function]}
      >
        mock1
      </li>
      <li
        data-type="list-item"
        key="mock2_1"
        onClick={[Function]}
      >
        mock2
      </li>
      <li
        data-type="list-item"
        key="mock3_2"
        onClick={[Function]}
      >
        mock3
      </li>
    </ul>
  </div>
  <span
    className="input-wrapper__label"
    htmlFor="mockId"
  >
    mockText
  </span>
</div>
`;

exports[`<Select /> should render correctly Select with focus state 1`] = `
<div
  className="input-wrapper input-wrapper--select"
>
  <div
    className="input-wrapper__field input-wrapper__field--select input-wrapper__field--focused"
  >
    <p
      className="field__output"
      id="mockId"
      onSelectOption={[Function]}
    >
      mock1
    </p>
    <ul
      className="input-wrapper__select-list"
      data-amount={3}
    >
      <li
        data-type="list-item"
        key="mock1_0"
        onClick={[Function]}
      >
        mock1
      </li>
      <li
        data-type="list-item"
        key="mock2_1"
        onClick={[Function]}
      >
        mock2
      </li>
      <li
        data-type="list-item"
        key="mock3_2"
        onClick={[Function]}
      >
        mock3
      </li>
    </ul>
  </div>
  <span
    className="input-wrapper__label"
    htmlFor="mockId"
  >
    mockText
  </span>
</div>
`;

exports[`<Select /> should render correctly Select with selected value in state 1`] = `
<div
  className="input-wrapper input-wrapper--select"
>
  <div
    className="input-wrapper__field input-wrapper__field--select "
  >
    <p
      className="field__output"
      id="mockId"
      onSelectOption={[Function]}
    >
      mock3
    </p>
    <ul
      className="input-wrapper__select-list"
      data-amount={3}
    >
      <li
        data-type="list-item"
        key="mock1_0"
        onClick={[Function]}
      >
        mock1
      </li>
      <li
        data-type="list-item"
        key="mock2_1"
        onClick={[Function]}
      >
        mock2
      </li>
      <li
        data-type="list-item"
        key="mock3_2"
        onClick={[Function]}
      >
        mock3
      </li>
    </ul>
  </div>
  <span
    className="input-wrapper__label"
    htmlFor="mockId"
  >
    mockText
  </span>
</div>
`;
